# pandor

./: .gitignore  README.md
ai/: README.md  test.py
ai/detector/: data.yaml  model_converter.py  requirements.txt  train.py
ai/detector/src/: yolo_utils.py
cloud/: CLOUD_README.md
cloud/python/src/auth/: Dockerfile  pandor_init.sql  pandor_plate_face_init.sql  requirements.txt  server.py
cloud/python/src/auth/manifests/: auth-deploy.yaml  configmap.yaml  secret.yaml
cloud/python/src/car_descriptor/: consumer.py  requirements.txt
cloud/python/src/car_descriptor/car/: descriptor.py
cloud/python/src/car_descriptor/manifests/: car-descriptor-deploy.yaml  configmap.yaml  secret.yaml
cloud/python/src/cli/: cli_pandor.py  config.ini  load_test.py  payload.json  test_upload.py
cloud/python/src/detector/: Dockerfile  consumer.py  requirements.txt
cloud/python/src/detector/detector/: vision.py
cloud/python/src/detector/manifests/: configmap.yaml  detector-deploy.yaml  secret.yaml
cloud/python/src/face_descriptor/: Dockerfile  README.md  consumer.py  requirements.txt
cloud/python/src/gateway/: Dockerfile  requirements.txt  server.py
hardware/: HW_README.md
hardware/video_interface/: CMakeLists.txt  README_VIDEO.md  hw_int_vid.cpp  pandore.db  video_config.json
hardware/zwave_interface/: Makefile  README_ZWAVE.md  ZWAVE_README.md
hardware/zwave_interface/controller_app/: Makefile  controller_app.c  nifFF832C74.jsn
hardware/zwave_interface/hw_int_sen/: Makefile  controller_app.cfg  hw_int_sen.c  nifF3365FF9.jsn  pandore.db  zwave_device_rec.txt
(+9 files in other folders)
